# indexfund

./: .coveragerc  .gitignore  README.md  __init__.py  config.py  data_loading.py  main.py  metrics.py  package.json  portfolio.py  pyproject.toml  reporting.py  requirements.txt  run_tests.py  strategy.py  visualization.py  weighting.py
.github/workflows/: python-package.yml
core/: data_loading.py  metrics.py  portfolio.py  reporting.py  strategy.py
dataset/: aave.csv  btc.csv  eth.csv  fear_and_greed.json  link.csv  pendle.csv  sol.csv  uni.csv
scripts/: kelly_allocation.py
tests/: __init__.py  conftest.py  test_data_loading.py  test_main.py  test_metrics.py  test_pool_optimizer.py  test_portfolio.py  test_weighting.py
utils/: utils.py
